Wed Aug 13 22:38:33 2003  Joern Thyssen  <jth@gnubg.org>

	* set.c (CommandSetTutorChequer): fix typo.
	(contributed by Rob Konigsberg)
	* gnubg.c (CommandSaveSettings): declare szTemp.
	* gtkprefs.c: make szTemp local.	
	(reported by Nardy)

Wed Aug 13 21:32:37 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (CommandNext): fix bug in "next marked" command.
	(reported by Klaus Rindholt)
	* play.c (ShowMark): protect GTK+ code.

Wed Aug 13 19:44:10 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c (GTKShowTheory): fix i18n problem.
	(reported by Jim)

Wed Aug 13 19:09:18 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (button_press_event): right clicks to 
	drop double and reject resignation.
	(contributed by Rob Konigsberg)

Wed Aug 13 18:08:35 2003  Joern Thyssen  <jth@gnubg.org>

	* configure.in: add some magic for board3d and gtk1.2. Also add
	a "--without-board3d" option as suggested by Jim.

Wed Aug 13 15:26:57 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>
	
	* gtktheory.c - don't call gettext on null strings.

Wed Aug 13 18:03:57 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* set.c: Clear cache when changing MET table. (Reported by Albert
	Silver)

Tue Aug 12 10:53:49 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gnubgmodule.c (PythonMatch): Initial version. Incomplete in some
	ways. Documentation missing. Likely to change.

Tue Aug 12 10:37:08 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* positionid.c (PositionFromID): constify some args.
	change CheckPosition and PositionFromID return sane TRUE/FALSE
	(1/0) for success/failure after even Joern was bitten by it in
	PythonPositionFromID.

Mon Aug 11 22:10:08 2003  Joern Thyssen  <jth@gnubg.org>

	* po/LINGUAS po/fr.po: French translation.
	* aclocal.m4, Makefile.in: finish upgrade to gettext 0.12.2

Mon Aug 11 14:06:22 GMT 2003 Jim Segrave    <jes@jes-2.demon.nl>

	* credits.sh, po/LINGUAS po/it.po - Italian translations by